--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Mon Aug 29 20:34:39 CEST 2022
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/jhipster_cms|jhipster_cms
+webSSL=false
 webAllowOthers=true
 webPort=8092
-webSSL=false
